Fix spacing on scoreboard

--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -11,7 +11,7 @@
   background: rgba(0, 0, 0, 0.9);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   border-radius: 20px;
 }
